Bug 460337 - (move) window to screeen {n} stopped working
Summary: (move) window to screeen {n} stopped working
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: git-stable-Plasma/5.26
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 460642 460780 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-13 04:49 UTC by pavel kropitz
Modified: 2022-10-20 19:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pavel kropitz 2022-10-13 04:49:41 UTC
SUMMARY
pre 5.26 shortcut binded to `window to screen {n}` worked.


STEPS TO REPRODUCE
1. systemsettings > shortcuts > kwin > bind `window to screen 0` to somehing
2. try to move any window with it

OBSERVED RESULT
window stays in place

EXPECTED RESULT
window moves to screen 0

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.26
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
wayland
Comment 1 Bug Janitor Service 2022-10-13 07:52:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3044
Comment 2 Vlad Zahorodnii 2022-10-13 11:19:29 UTC
Git commit 4340a020d1e3f7032b8263c6d0c33a0cd3d093bd by Vlad Zahorodnii.
Committed on 13/10/2022 at 10:43.
Pushed by vladz into branch 'master'.

Fix "window to screen" and "switch to screen" shortcuts

M  +2    -2    src/useractions.cpp

https://invent.kde.org/plasma/kwin/commit/4340a020d1e3f7032b8263c6d0c33a0cd3d093bd
Comment 3 Vlad Zahorodnii 2022-10-13 11:23:58 UTC
Git commit 23d3fb45e5f1b064a0677caab31c8361c0a298b3 by Vlad Zahorodnii.
Committed on 13/10/2022 at 11:23.
Pushed by vladz into branch 'Plasma/5.26'.

Fix "window to screen" and "switch to screen" shortcuts


(cherry picked from commit 4340a020d1e3f7032b8263c6d0c33a0cd3d093bd)

M  +2    -2    src/useractions.cpp

https://invent.kde.org/plasma/kwin/commit/23d3fb45e5f1b064a0677caab31c8361c0a298b3
Comment 4 Nicolas Fella 2022-10-18 10:32:52 UTC
*** Bug 460642 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2022-10-20 19:07:07 UTC
*** Bug 460780 has been marked as a duplicate of this bug. ***