Fix "window to screen" and "switch to screen" shortcuts

BUG: 460337


(cherry picked from commit 4340a020d1e3f7032b8263c6d0c33a0cd3d093bd)